doc/windows/Delphi/32bit/multi_card/gts.pas


function GT_SetCrdMapBase(cardNum:SmallInt ;crd:SmallInt;base:SmallInt):SmallInt;stdcall;External GTDLL;
function GT_GetCrdMapBase(cardNum:SmallInt ;crd:SmallInt;out pBase:SmallInt):SmallInt;stdcall;External GTDLL;
function GT_SetCrdSmooth(cardNum:SmallInt ;crd:SmallInt;var pCrdSmooth:TCrdSmooth):SmallInt;stdcall;External GTDLL;
function GT_GetCrdSmooth(cardNum:SmallInt ;crd:SmallInt;out pCrdSmooth:TCrdSmooth):SmallInt;stdcall;External GTDLL;
function GT_SetCrdJerk(cardNum:SmallInt ;crd:SmallInt;jerkMax:Double):SmallInt;stdcall;External GTDLL;
function GT_GetCrdJerk(cardNum:SmallInt ;crd:SmallInt;out pJerkMax:Double):SmallInt;stdcall;External GTDLL;
function GT_SetCrdPrm(cardNum:SmallInt ;crd:SmallInt;var pCrdPrm:TCrdPrm):SmallInt;stdcall;External GTDLL;
function GT_GetCrdPrm(cardNum:SmallInt ;crd:SmallInt;out pCrdPrm:TCrdPrm):SmallInt;stdcall;External GTDLL;
function GT_SetArcAllowError(cardNum:SmallInt ;crd:SmallInt;error:Double):SmallInt;stdcall;External GTDLL;
function GT_CrdSpace(cardNum:SmallInt ;crd:SmallInt;out pSpace:LongInt; fifo:SmallInt = 0):SmallInt;stdcall;External GTDLL;
function GT_CrdData(cardNum:SmallInt ;crd:SmallInt;var pCrdData:TCrdData; fifo:SmallInt = 0):SmallInt;stdcall;External GTDLL;
function GT_CrdDataCircle(cardNum:SmallInt ;crd:SmallInt;var pCrdData:TCrdData ;fifo:SmallInt =0): SmallInt; stdcall; External GTDLL;
function GT_LnXY(cardNum:SmallInt ;crd:SmallInt ;x:LongInt ;y:LongInt ;synVel:Double ;synAcc:Double ;velEnd:Double =0;fifo:SmallInt =0): SmallInt; stdcall; External GTDLL;
function GT_LnXYZ(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;synVel:Double ;synAcc:Double ;velEnd:Double =0;fifo:SmallInt =0): SmallInt; stdcall; External GTDLL;
function GT_LnXYZA(cardNum:SmallInt ;crd:SmallInt ;x:LongInt; y:LongInt;z:LongInt;a:LongInt;synVel:Double ;synAcc:Double;velEnd:Double =0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYG0(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;synVel:Double ;synAcc:Double ;fifo:SmallInt =0): SmallInt; stdcall; External GTDLL;
function GT_LnXYZG0(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;synVel:Double;synAcc:Double;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYZAG0(cardNum:SmallInt ;crd:SmallInt ;x:LongInt;y:LongInt;z:LongInt;a:LongInt;synVel:Double;synAcc:Double;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcXYR(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double =0;fifo:SmallInt =0): SmallInt; stdcall; External GTDLL;
function GT_ArcXYC(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;xCenter:Double;yCenter:Double ;circleDir:SmallInt ;synVel:Double ;synAcc:Double ;velEnd:Double =0;fifo:SmallInt =0): SmallInt; stdcall; External GTDLL;
function GT_ArcYZR(cardNum:SmallInt ;crd:SmallInt;y:LongInt;z:LongInt;radius:Double;circleDir:SmallInt ;synVel:Double ;synAcc:Double ;velEnd:Double =0;fifo:SmallInt =0): SmallInt; stdcall; External GTDLL;
function GT_ArcYZC(cardNum:SmallInt ;crd:SmallInt;y:LongInt;z:LongInt;yCenter:Double;zCenter:Double ;circleDir:SmallInt ;synVel:Double ;synAcc:Double ;velEnd:Double =0;fifo:SmallInt =0): SmallInt; stdcall; External GTDLL;
function GT_ArcZXR(cardNum:SmallInt ;crd:SmallInt;z:LongInt;x:LongInt;radius:Double;circleDir:SmallInt ;synVel:Double ;synAcc:Double ;velEnd:Double =0;fifo:SmallInt =0): SmallInt; stdcall; External GTDLL;
function GT_ArcZXC(cardNum:SmallInt ;crd:SmallInt;z:LongInt;x:LongInt;zCenter:Double;xCenter:Double ;circleDir:SmallInt ;synVel:Double ;synAcc:Double ;velEnd:Double =0;fifo:SmallInt =0): SmallInt; stdcall; External GTDLL;
function GT_ArcXYZ(ccardNum:SmallInt ;rd:SmallInt;x:LongInt;y:LongInt;z:LongInt;interX:Double;interY:Double;interZ:Double;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYOverride2(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYZOverride2(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYZAOverride2(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;a:LongInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYG0Override2(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;synVel:Double;synAcc:Double;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYZG0Override2(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;synVel:Double;synAcc:Double;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYZAG0Override2(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;a:LongInt;synVel:Double;synAcc:Double;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcXYROverride2(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcXYCOverride2(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;xCenter:Double;yCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcYZROverride2(cardNum:SmallInt ;crd:SmallInt;y:LongInt;z:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcYZCOverride2(cardNum:SmallInt ;crd:SmallInt;y:LongInt;z:LongInt;yCenter:Double;zCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcZXROverride2(cardNum:SmallInt ;crd:SmallInt;z:LongInt;x:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcZXCOverride2(cardNum:SmallInt ;crd:SmallInt;z:LongInt;x:LongInt;zCenter:Double;xCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixXYRZ(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixXYCZ(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;xCenter:Double;yCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixYZRX(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixYZCX(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;yCenter:Double;zCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixZXRY(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixZXCY(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;zCenter:Double;xCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixXYRZOverride2(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixXYCZOverride2(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;xCenter:Double;yCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixYZRXOverride2(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixYZCXOverride2(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;yCenter:Double;zCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixZXRYOverride2(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_HelixZXCYOverride2(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;zCenter:Double;xCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYWN(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYZWN(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYZAWN(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;a:LongInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYG0WN(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;synVel:Double;synAcc:Double;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYZG0WN(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;synVel:Double;synAcc:Double;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYZAG0WN(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;a:LongInt;synVel:Double;synAcc:Double;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcXYRWN(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcXYCWN(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;xCenter:Double;yCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcYZRWN(cardNum:SmallInt ;crd:SmallInt;y:LongInt;z:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcYZCWN(cardNum:SmallInt ;crd:SmallInt;y:LongInt;z:LongInt;yCenter:Double;zCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcZXRWN(cardNum:SmallInt ;crd:SmallInt;z:LongInt;x:LongInt;radius:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcZXCWN(cardNum:SmallInt ;crd:SmallInt;z:LongInt;x:LongInt;zCenter:Double;xCenter:Double;circleDir:SmallInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_ArcXYZWN(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;z:LongInt;interX:Double;interY:Double;interZ:Double;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
function GT_LnXYOverride2WN(cardNum:SmallInt ;crd:SmallInt;x:LongInt;y:LongInt;synVel:Double;synAcc:Double;velEnd:Double=0;segNum:LongInt=0;fifo:SmallInt=0): SmallInt; stdcall; External GTDLL;
